# py65emu

./: .editorconfig  .gitignore  HISTORY.rst  README.rst  pyproject.toml  tox.ini  traceback
.github/workflows/: publish.yml  run-tests.yml
docs/: api.rst  conf.py  index.rst  usage.rst
docs/_templates/: custom-class-template.rst  custom-module-template.rst
py65emu/: __init__.py  cpu.py  debug.py  mmu.py  operation.py  operator.py
tests/: test_cpu.py  test_debug.py  test_klaus_dormann.py  test_mmu.py  test_nestest.py  test_operation.py  test_operator.py  test_processor.py  test_suites.py  test_timing.py
tests/files/: 6502_decimal_test.lst  6502_functional_test.lst  6502_interrupt_test.lst
